# effective-fishstick

./: .gitignore  PROGRESS.md  README.md  main.py  pyproject.toml  test_run.py
agents/: __init__.py  anomaly.py  base.py  llm_client.py  orchestrator.py  position_advisor.py  reviewer.py  stock_selector.py  timing.py
backtest/: engine.py
config/: settings.py  settings.yaml
data/: _http.py  cache.py  fundamental.py  market.py  news.py  tushare.py
effective_fishstick.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
engine/: profile.py  risk.py  trade_import.py
notify/: __init__.py  cards.py  commands.py  feishu.py
profiles/: buffett_value.yaml  default.yaml  momentum.yaml
scripts/: DEPLOY.md  check_feishu.py  effective-fishstick.service  setup_vps.sh  update.sh
storage/: models.py  vector_store.py
tests/: test_feishu.py  test_risk.py
web/: app.py  server.py
